--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="member" data-aos="zoom-in" data-aos-delay="400">
               <div class="pic"><img src="assets/img/team/tukul.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Mr Tukul</h4>
+                <h4>M Nizar Annauval</h4>
                 <span>Wakil Bendahara</span>
                 <div class="social">
                   <a href="https://www.instagram.com/nizarannauval/"><i class="bi bi-instagram"> @nizarannauval</i></a>
